# token_dash

./: .gitignore  README.md  aggregator.py  app.py  formatter.py  pi_reader.py  pyproject.toml  run.sh  runner.py  setup.py
.github/workflows/: build.yml
assets/: app.icns
scripts/: make_icon.py
token_dash/: __init__.py  aggregator.py  app.py  oc_reader.py  record.py
